# NapTwitter

./: .env_example  .python-version  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
app/: celery_conf.py  database.py  main.py  urls.py
app/auth/: manager.py
app/models/: likes.py  tweets.py  users.py
app/routes/: tweet.py  user.py
app/schemas/: base_response.py  like.py  tweet.py  user.py
app/services/: follower.py  like.py  tasks.py  tweet.py  user.py
app/utils/: token.py  user.py
migration/: env.py
migration/versions/: 3a7051a0f7f9_auth.py  5f1ab001d90d_initial.py  724c302be0f4_initial.py
test/: conftest.py  database.py
test/routes/: conftest.py  test_followers.py  test_likes.py
test/utils/: test_token.py
